ProtoType_Bot/trial files/demo files/.metadata/.plugins/org.eclipse.cdt.ui/stm_gps_2.build.log
21:02:09 **** Incremental Build of configuration Debug for project stm_gps_2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_NUCLEO_64 -DUSE_HAL_DRIVER -DSTM32G431xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/BSP/STM32G4xx_Nucleo -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:115:38: error: '_rx_buffer' undeclared (first use in this function)
  115 |           HAL_UART_Transmit(&huart2, _rx_buffer,sizeof(_rx_buffer), HAL_MAX_DELAY);
      |                                      ^~~~~~~~~~
../Core/Src/main.c:115:38: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

21:02:09 Build Failed. 2 errors, 0 warnings. (took 306ms)

